--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       });
 
       try {
-        const res = await fetch("http://localhost:3000/summarize", {
+        const res = await fetch("https://aya-crypto-agent.onrender.com/summarize", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ portfolio })
